--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".dashboard">
+        <activity android:name=".home">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".login" />
+        <activity android:name=".RegUsers"></activity>
+        <activity android:name=".userLogin">
 
+        </activity>
+        <activity android:name=".login" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".dashboard" />
     </application>
 
 </manifest>
