--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -16,6 +17,14 @@
         android:roundIcon="@mipmap/ic_pen_logo_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".todo_add"
+            android:configChanges="orientation|screenSize"
+            android:parentActivityName=".todo_main" />
+        <activity
+            android:name=".todo_main"
+            android:configChanges="orientation|screenSize"
+            android:parentActivityName=".dashboard" />
         <activity android:name=".admin_user_editor" />
         <activity android:name=".admin_show_std" />
         <activity android:name=".show_grp" />
